<resources>
    <string name="app_name">Travel App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_button">Sign In</string>
    <string name="login_register">Register</string>
    <string name="login_forgot_password">Forgot Password</string>
    <string name="login_remember_me">Remember me</string>
    <string name="login_username_email">Username/Email</string>
    <string name="black">#000000</string>
    <string name="title_activity_my_app">MyApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="register_username">Username</string>
    <string name="register_email">Email</string>
    <string name="prompt_password_confirmation">Confirm Password</string>
    <string name="title_profile">Profile</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_search">Search</string>
    <string name="title_bookmark">Bookmark</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>