<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/container"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3fff"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_custom_input"
            android:hint="@string/login_username_email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:selectAllOnFocus="true"
            android:textColorHint="#000000"
            android:textSize="20sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_custom_input"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:selectAllOnFocus="true"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:autofillHints="" />

        <CheckBox
            android:id="@+id/saveLoginCredentials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_remember_me"
            android:textColor="#000000"
            android:hint="@string/black"
            android:layout_marginTop="15dp"
            android:layout_marginStart="-85dp"
            android:buttonTint="#000000"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_button"
            android:text="@string/login_button"
            android:textAllCaps="false"
            android:textColor="#FFFBF6"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_button"
            android:text="@string/login_register"
            android:textAllCaps="false"
            android:textColor="#FFFBF6"
            tools:ignore="TextContrastCheck" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#3fff"
            android:layout_marginTop="15dp"/>

        <TextView
            android:id="@+id/forgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/login_forgot_password"
            android:textColor="#DD2C00"
            android:textSize="18sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>