<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#3fff"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <EditText
            android:id="@+id/username"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_custom_input"
            android:hint="@string/register_username"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:selectAllOnFocus="true"
            android:textColorHint="#000000"
            android:textSize="20sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/email"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_custom_input"
            android:hint="@string/register_email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:selectAllOnFocus="true"
            android:textColorHint="#000000"
            android:textSize="20sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/password"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_custom_input"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:selectAllOnFocus="true"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/password_confirmation"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/login_custom_input"
            android:hint="@string/prompt_password_confirmation"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:selectAllOnFocus="true"
            android:textColorHint="@color/black"
            android:textSize="20sp"
            android:autofillHints="" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_button"
            android:text="@string/login_register"
            android:textAllCaps="false"
            android:textColor="#FFFBF6"
            tools:ignore="TextContrastCheck" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#3fff"
            android:layout_marginTop="15dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>